# walletrs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
contrib/liana/: CLAUDE.md  UPSTREAM.md
crates/policy-core/: Cargo.toml
crates/policy-core/src/: descriptor.rs  error.rs  key_utils.rs  lib.rs  managed_key.rs  shape.rs  spec.rs  taproot.rs  tests.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: config.rs  db.rs  http.rs  lib.rs  main.rs
crates/server/src/agent/: connect.rs  dispatcher.rs  error.rs  keypair.rs  mod.rs  pair.rs  state.rs  wire.rs
crates/server/src/proto/: mod.rs
crates/server/src/storage/: backend.rs  crypto.rs  encrypting.rs  filesystem.rs  index.rs  manager.rs  mod.rs  path.rs  s3.rs  schema.rs  traits.rs
crates/server/src/storage/models/: managed_key.rs  mod.rs  psbt.rs  signed_psbt.rs  wallet.rs
crates/server/src/wallet/: mod.rs
crates/server/src/wallet/advanced/: build.rs  descriptor.rs  error.rs  mod.rs  shape.rs  spec.rs  taproot.rs  tests.rs
crates/server/src/wallet/bdk/: key_utils.rs  mod.rs  wallet_manager.rs
crates/server/src/wallet/service/: auth.rs  key_management.rs  middleware.rs  mod.rs  system.rs  transaction_handling.rs  wallet_creation.rs  wallet_operations.rs
crates/server/src/wallet/signer/: mod.rs
crates/server/tests/: s3_integration.rs
crates/wallet-runtime/: Cargo.toml
crates/wallet-runtime/src/: electrum.rs  error.rs  lib.rs  persister.rs  policy_path.rs  psbt.rs  runtime.rs  signer.rs  spending_path.rs
crates/wallet-runtime/tests/: end_to_end.rs
docs/: ARCHITECTURE.md  INTEGRATING.md  OPERATING.md
proto/: walletrpc.proto
proto/google/api/: annotations.proto  http.proto
