[package]
name = "policy-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD-3-Clause"
description = "Pure Bitcoin wallet policy primitives — spec validation, descriptor construction, taproot leaf-hash extraction. No service, DB, or async runtime dependencies."

[dependencies]
bdk_wallet = { version = "1.1.0", features = ["bip39", "keys-bip39"] }
miniscript = { version = "12.0", features = ["serde", "compiler", "base64"] }
liana = { path = "../../contrib/liana" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4"
log = "0.4"

[lints.rust]
warnings = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
result_large_err = "allow"
too_many_arguments = "allow"
redundant_field_names = "allow"
collapsible_if = "allow"
